feat: add save image logic with file storage, fix dependencies, add get image response error
